chang some propertis

--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
         </div>
       </div>
       <div class="right_card card">
-
-
-          <img src="images/image-header-desktop.jpg" alt="">
-        
-      </div>
+        <picture>
+        <source media="(min-width: 900px)" srcset="images/image-header-desktop.jpg">
+        <source media="(min-width: 700px)" srcset="images/image-header-mobile.jpg">
+        <img src="images/image-header-desktop.jpg" alt="">
+        </picture>
+        </div>
     </div>
   </main>
     <div class="attribution">
